[gd_scene load_steps=4 format=3 uid="uid://b31w7s5mkuo1u"]

[ext_resource type="Script" uid="uid://bbafrylcvyr6n" path="res://git_describe_demo/demo.gd" id="1_x5x6s"]
[ext_resource type="Texture2D" uid="uid://cb3pbggua81t" path="res://git_describe_demo/icon.svg" id="2_ytiva"]
[ext_resource type="Script" uid="uid://cwjb3x45e2r4k" path="res://addons/git_describe/label/git_describe_label.gd" id="3_dar0o"]

[node name="Demo" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x5x6s")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_ytiva")
expand_mode = 3

[node name="GitDescribeLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "{git describe here}"
script = ExtResource("3_dar0o")
metadata/_custom_type_script = "uid://cwjb3x45e2r4k"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Skipped" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
modulate = Color(0.560815, 0.929641, 0.560815, 1)
layout_mode = 2
text = "Running in exported build. Checks skipped."
autowrap_mode = 3

[node name="PlatformConfigured" type="CheckBox" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
button_mask = 0
text = "Platform configured"

[node name="RepositoryFound" type="CheckBox" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
button_mask = 0
text = "Repository found"

[node name="GitFound" type="CheckBox" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
button_mask = 0
text = "Git found"
